Them tinh nang AJAX va them viec toc

--- a/App/Views/AJAX/so-do-gia-dinh.html
+++ b/App/Views/AJAX/so-do-gia-dinh.html
@@ -134,4 +134,5 @@
     <h4>Thống kê: </h4>
     <p><i class="fa fa-child"></i> Số con trai: <b>{{countConTrai}}</b></p>
     <p><i class="fa fa-child"></i> Số con gái: <b>{{countConGai}}</b></p>
+    <a style="float: right;" href="/admin"> Bổ sung thông tin</a>
 </div>
