--- a/App/Views/base_user.html
+++ b/App/Views/base_user.html
@@ -188,6 +188,8 @@
 </footer>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/jquery.zoomooz.min.js"></script>
+<script src="/js/jquery.zoomooz-zoomContainer.js"></script>
 {% block footer %}
 {% endblock %}
 </body>
